// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PublishersTable /> when there are many rows should match the snapshot 1`] = `
<DocumentFragment>
  <figure
    class="data-table data-table-collapse data-table-core-publishers"
  >
    <table>
      <thead
        class="data-table-header"
      >
        <tr>
          <th
            class="data-table-header-name"
          >
            Name
          </th>
          <th
            class="data-table-header-website"
          >
            Website
          </th>
          <th
            class="data-table-header-actions"
          >
             
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="data-table-cell-name"
            data-label="Name"
          >
            <a
              href="/publishers/crystal-sphere-publications"
            >
              Crystal Sphere Publications
            </a>
          </td>
          <td
            class="data-table-cell-website"
            data-label="Website"
          >
            <a
              href="https://www.example.com/crystal-sphere-publications"
            >
              <span>
                www.example.com/crystal-sphere-publications
              </span>
            </a>
          </td>
          <td
            class="data-table-cell-actions"
            data-label="Actions"
          >
             
          </td>
        </tr>
        <tr>
          <td
            class="data-table-cell-name"
            data-label="Name"
          >
            <a
              href="/publishers/flumph-free-press"
            >
              Flumph Free Press
            </a>
          </td>
          <td
            class="data-table-cell-website"
            data-label="Website"
          >
            <a
              href="https://www.example.com/flumph-free-press"
            >
              <span>
                www.example.com/flumph-free-press
              </span>
            </a>
          </td>
          <td
            class="data-table-cell-actions"
            data-label="Actions"
          >
             
          </td>
        </tr>
        <tr>
          <td
            class="data-table-cell-name"
            data-label="Name"
          >
            <a
              href="/publishers/spelljammer-monthly"
            >
              Spelljammer Monthly
            </a>
          </td>
          <td
            class="data-table-cell-website"
            data-label="Website"
          >
            <a
              href="https://www.example.com/spelljammer-monthly"
            >
              <span>
                www.example.com/spelljammer-monthly
              </span>
            </a>
          </td>
          <td
            class="data-table-cell-actions"
            data-label="Actions"
          >
             
          </td>
        </tr>
      </tbody>
    </table>
  </figure>
</DocumentFragment>
`;

exports[`<PublishersTable /> when there is no matching data should match the snapshot 1`] = `
<DocumentFragment>
  <figure
    class="data-table data-table-collapse data-table-core-publishers"
  >
    <table>
      <thead
        class="data-table-header"
      >
        <tr>
          <th
            class="data-table-header-name"
          >
            Name
          </th>
          <th
            class="data-table-header-website"
          >
            Website
          </th>
          <th
            class="data-table-header-actions"
          >
             
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="data-table-empty"
            colspan="3"
          >
            There are no matching publishers.
          </td>
        </tr>
      </tbody>
    </table>
  </figure>
</DocumentFragment>
`;
